New React Firebase application

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="material.css">
     <script src="material.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-firestore.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <title>React App</title>
